--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -8,7 +8,7 @@
   /* ниже прописывется position:relative для возможности расоположить ссылку посредством absolute */
   position: relative;
   /* ниже установливается ЧБ фото Ричарда Фейнмана в качестве фонового изображения */
-  background-image: url(/images/feynman.png);
+  background-image: url(./images/feynman.png);
   background-size: 867px 637px;
   background-repeat: no-repeat;
   background-position: bottom;
