ПР-2 указаны корректные пути ко всем изображениям

--- a/pages/index.css
+++ b/pages/index.css
@@ -70,6 +70,7 @@
 @import url(../blocks/video/__iframes/video__iframes.css);
 @import url(../blocks/video/__iframe/video__iframe.css);
 @import url(../blocks/link/link.css);
+@import url(../blocks/feynman/__illustration/feynman__illustration.css);
 
 
 
