--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,9 +1,9 @@
 .cards__item{
   max-width: 240px;
   width: 100%;
-  margin: 60px 100px 0 0;
+  margin: 0 100px 0 0;
 }
 
 .cards__item:nth-of-type(3n){
-  margin: 60px 0 0 0;
+  margin: 0;
 }
